--- a/WebApplication2/Views/Home/Login.cshtml
+++ b/WebApplication2/Views/Home/Login.cshtml
@@ -137,7 +137,7 @@
                                 <hr class="mt-5 mb-4 border-secondary-subtle">
                                 <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end">
 
-                                    <p> Don't have account <a class="link-secondary btn btn-light">Create new account</a></p>
+                                    <p> Don't have account <a class="link-secondary btn btn-light" asp-controller="home" asp-action="SignUp" >>Create new account</a></p>
 
                                 </div>
                             </div>
