--- a/WebApplication2/Views/Home/Search.cshtml
+++ b/WebApplication2/Views/Home/Search.cshtml
@@ -86,7 +86,7 @@
                             <a asp-controller="home" asp-action="Login" class="nav-link">Login</a>
                       </li>
                       <li class="nav-item">
-                            <a asp-controller="home" asp-action="Sign up" class="nav-link" role="button" data-bs-toggle="button">Sign Up</a>
+                            <a asp-controller="home" asp-action="SignUp" class="nav-link">Sign Up</a>
                       </li>
                     </ul>
          
