--- a/WebApplication2/Views/Student/Review.cshtml
+++ b/WebApplication2/Views/Student/Review.cshtml
@@ -82,7 +82,7 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Student" asp-action="Signout">Signout</a>
+                            <a asp-controller="Home" asp-action="Index" class="nav-link">Signout</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="student" asp-action="Profile">Profile</a>
