--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -78,7 +78,8 @@
               </li> 
 
               <li class="nav-item ">
-                <a class="nav-link" href="index.html">For Instructors
+                <a class="nav-link" asp-controller="home" asp-action="ForInstructor">
+                                For Instructors
                 </a>
               </li> 
               
@@ -86,7 +87,7 @@
                             <a asp-controller="home" asp-action="Login" class="nav-link" >Login</a>
               </li>
               <li class="nav-item">
-                            <a asp-controller="home" asp-action="Sign up" class="nav-link" role="button" data-bs-toggle="button">Sign Up</a>
+                            <a asp-controller="home" asp-action="SignUp" class="nav-link" >Sign Up</a>
               </li>
             </ul>
          
