--- a/WebApplication2/Views/Instructor/AddCourse.cshtml
+++ b/WebApplication2/Views/Instructor/AddCourse.cshtml
@@ -91,7 +91,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a asp-controller="Instructor" asp-action="Signout" class="nav-link" >Signout</a>
+                            <a asp-controller="Home" asp-action="Index" class="nav-link" >Signout</a>
                         </li>
                         <li class="nav-item">
                             <a asp-controller="Instructor" asp-action="Profile" class="nav-link" >Profile</a>
@@ -110,163 +110,7 @@
         </div>
     </div>
 
-    <!-- <section id="contact" class="contact">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="contact_contant ">
-                    <div class="main_contact_text_area ">
-                        <div class="col-sm-8  no-padding">
-                            <div class="single_contant_left wow fadeInRight">
-                                <form action="#" id="formid"  >
-                                    <div class="row" style=" margin: 20px;">
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" name="name" placeholder="course name" required="">
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" name="email" placeholder="course description" required="">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row" style=" margin: 20px;">
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" name="name" placeholder="topics covered" required="">
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <ul class=" dropdown">
-                                                    <a class="nav-item dropdown-toggle form-control" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                                        SubCategory
-                                                    </a>
-                                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                                    </ul>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row" style=" margin: 20px;">
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <ul class=" dropdown">
-                                                    <a class="dropdown-toggle form-control" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                                        Language
-                                                    </a>
-                                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                                    </ul>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <ul class=" dropdown">
-                                                    <a class="dropdown-toggle form-control" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                                        Level
-                                                    </a>
-                                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                                    </ul>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row" style=" margin: 20px;">
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <input type="datetime" class="form-control" name="email" placeholder="last update" required="">
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <ul class=" dropdown">
-                                                    <a class="dropdown-toggle form-control" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                                        Platform
-                                                    </a>
-                                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                                    </ul>
-                                                </ul>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                    <div class="row" style=" margin: 20px;">
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <input type="url" class="form-control" name="name" placeholder="link" required="">
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <input type="time" class="form-control" name="email" placeholder="course duration" required="">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row" style=" margin: 20px;">
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <input type="time" class="form-control" name="name" placeholder="average of video length" required="">
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <div class="form-group">
-                                                    <ul class=" dropdown">
-                                                        <a class="dropdown-toggle form-control" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                                            Price Status
-                                                        </a>
-                                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                                            <li><a class="dropdown-item" href="#">Free</a></li>
-                                                            <li><a class="dropdown-item" href="#">Paid</a></li>
-
-                                                        </ul>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row" style=" margin: 20px;">
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <input type="file" class="form-control" name="name" placeholder="course profile" required="">
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <input type="email" class="form-control" name="email" placeholder="instructor name" required="">
-                                            </div>
-                                        </div>
-                                    </div>
-
-
-
-                                    <div class="text-right">
-                                        <button value="send">
-                                        <input type="submit" value="SEND" class="btn btn-sm">
-                                        </button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-
-                </div> 
-    </div>
-    </div>
-    </section>-->
+   
 
 
     <div class="send-message">
