--- a/WebApplication2/Views/Instructor/MyCourses.cshtml
+++ b/WebApplication2/Views/Instructor/MyCourses.cshtml
@@ -95,7 +95,7 @@
               </li> 
              
               <li class="nav-item">
-                            <a class="nav-link" asp-controller="Instructor" asp-action="Signout">Signout</a>
+                            <a asp-controller="Home" asp-action="Index" class="nav-link">Signout</a>
               </li>
               <li class="nav-item">
 							<a class="nav-link" asp-controller="Instructor" asp-action="Profile">Profile</a>
