--- a/WebApplication2/Views/Student/Index.cshtml
+++ b/WebApplication2/Views/Student/Index.cshtml
@@ -83,7 +83,7 @@
               </li> 
               
               <li class="nav-item">
-                            <a class="nav-link" asp-controller="Student" asp-action="Signout">Signout</a>
+                            <a asp-controller="Home" asp-action="Index" class="nav-link">Signout</a>
               </li>
               <li class="nav-item">
                             <a class="nav-link" asp-controller="student" asp-action="Profile">Profile</a>
