--- a/WebApplication2/Views/Instructor/AddCourse.cshtml
+++ b/WebApplication2/Views/Instructor/AddCourse.cshtml
@@ -2,7 +2,8 @@
 
 
 @{
-    SelectList CategoriesList = new SelectList(ViewBag.Categories, "CategoryId", "CategoryName");
+    var CategoriesList = new SelectList(ViewBag.Categories, "CategoryId", "CategoryName");
+    var LanguageList = new SelectList(ViewBag.Languages, "LanguageId", "Name");
 }
 
 <!DOCTYPE 
@@ -23,11 +24,8 @@ html>
 
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-   <link href="~/lib/bootstrap/dist/css/bootstrap-select.min.css" rel="stylesheet">
-   <link href="~/lib/" rel="stylesheet">
-   
+  
 
-    <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.min.css" rel="stylesheet">-->
 
 
 
@@ -37,7 +35,9 @@ html>
     <link href="~/css/site3.css" rel="stylesheet">
     <link href="~/css/site4.css" rel="stylesheet">
     <link href="~/css/StyleSheet.css" rel="stylesheet">
+    <style>
 
+       
         #subcategoriesList .dropdown-item {
             padding: 10px;
             cursor: pointer; /* make it clear items are clickable */
@@ -68,6 +68,35 @@ html>
             background-position: right 0.75rem center;
             background-size: 12px 12px;
         }
+
+            .custom-select:focus {
+                border-color: red;
+                outline: none;
+                box-shadow: 0 0 0 0.25rem rgba(255, 0, 0, 0.5);
+            }
+        /* Custom styling for the select element */
+      /*   .custom-select {
+            appearance: none; /* Removes default browser styling */
+            -webkit-appearance: none; /* For Safari and Chrome */
+            -moz-appearance: none; /* For Firefox */
+            padding: 0.375rem 1.75rem 0.375rem 0.75rem; /* Bootstrap's default padding */
+            font-size: 1rem; /* Bootstrap's default font size */
+            line-height: 1.5; /* Bootstrap's default line height */
+            border-radius: 0.25rem; /* Bootstrap's default border radius */
+            border: 1px solid #ced4da; /* Bootstrap's default border */
+            background-color: #fff;
+            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"><path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/></svg>'); /* Bootstrap 5 arrow icon */
+            background-repeat: no-repeat, repeat;
+            background-position: right 0.75rem top 50%, 0 0; /* Position for the arrow icon */
+            background-size: 16px 12px; /* Size of the arrow icon */
+            cursor: pointer;
+        }
+
+        /* Adjust padding for the select wrapper to position the arrow correctly */
+        .select-wrapper {
+            position: relative;
+        } */
+    </style>
 
 </head>
 
@@ -167,11 +196,11 @@ html>
                 </div>
                 <div class="col-md-6">
                     <div class="contact-form">
-                        <form id="contact" action="" method="post">
+                        <form asp-controller="Instructor"id="contact" asp-action="Addcourse" method="post">
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <fieldset>
-                                        <input name="course name" type="text" class="form-control" id="course name" placeholder="course name" required="">
+                                        <input name="course name" type="text" class="form-control" id="course name" placeholder="course name">
                                     </fieldset>
                                 </div>
 
@@ -188,7 +217,7 @@ html>
                                         </select>
                                     </fieldset>
 
-                                </div> *@
+                                </div> *@  
 
 
 
@@ -198,23 +227,24 @@ html>
 
 
                                 <!-- category dropdown region -->
-                               <fieldset>
-                                    <div class="form-group mb-4">
+                              <fieldset>
+
+    <div class="form-group mb-4">
         <select id="categoriesDropdown" asp-for="CategoryId" asp-items="CategoriesList" onchange="updateSubcategories(this.value)" style="border: 1px solid #e9ecef; border-radius: 0.25rem;" class="form-select mr-sm-2">
             <option value="-1">Select a Category &#9660;</option>
-                                        </select>
-                                    </div>
-                                    </fieldset>
+        </select>
+    </div>
+</fieldset>
                                 <!-- subcategory dropdown region -->
-                                <div class="col-lg-12 col-md-12 col-sm-12">
-                                    <fieldset>
+<div class="col-lg-12 col-md-12 col-sm-12">
+    <fieldset>
                                         <div class="dropdown  form-group mb-4 "style=" border: 1px solid #e9ecef; border-radius: 0.25rem;" class="form-select mr-sm-2">
             <a class="dropdown-toggle form-control" id="dropdownMenuLink" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Select a Subcategory
-                                    </a>
+            </a>
             <ul id="subcategoriesList" class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                 <!-- Dynamic subcategory items will be added here -->
-                                    </ul>
+            </ul>
         </div>
                                         <input type="hidden" asp-for="SubcategoryId" id="selectedSubcategoryId"  />
         
@@ -235,10 +265,16 @@ html>
                                 </fieldset>
                                 </div>
 
+
+
+
+
+
+
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <fieldset >
                                         
-                                        <input name="last update" type="date" class="form-control" id="last update" placeholder="last update" required="">
+                                        <input name="last update" type="date" class="form-control" id="last update" placeholder="last update" >
                                         
                                     </fieldset>
                                 </div>
@@ -260,17 +296,20 @@ html>
 
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <fieldset>
-                                        <input name="link " type="url" class="form-control" id="link " placeholder="link " required="">
+                                        <input name="link " type="url" class="form-control" id="link " placeholder="link " >
                                     </fieldset>
                                 </div>
 
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <fieldset>
-                                        <input name="instructor name" type="text" class="form-control" id="instructor name" placeholder="instructor name" required="">
+                                        <input name="instructor name" type="text" class="form-control" id="instructor name" placeholder="instructor name" >
                                     </fieldset>
                                 </div>
                                 
                             </div>
+                            <fieldset>
+                                <button type="submit" id="contact" class="filled-button">Submit </button>
+                            </fieldset>
                         </form>
                     </div>
                 </div>
@@ -283,7 +322,7 @@ html>
 
                                     <div class="col-lg-12 col-md-12 col-sm-12">
                                         <fieldset>
-                                            <input name="course description" type="text" class="form-control" id="course description" placeholder="course description" required="">
+                                            <input name="course description" type="" class="form-control" id="course description" placeholder="course description" required="">
                                         </fieldset>
                                     </div>
 
@@ -484,7 +523,7 @@ html>
         $(document).ready(function () {
             $('.selectpicker').selectpicker();
         });
-    </script>
+    </script> *@
 <script language="text/Javascript">
     cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
     function clearField(t) {                   //declaring the array outside of the
@@ -495,7 +534,7 @@ html>
         }
     }
 </script>
-
+   
 
   </body>
 
