--- a/WebApplication2/Views/Instructor/AddCourse.cshtml
+++ b/WebApplication2/Views/Instructor/AddCourse.cshtml
@@ -39,7 +39,7 @@ html>
 
        
         #subcategoriesList .dropdown-item {
-            padding: 10px;
+            padding: 5px;
             cursor: pointer; /* make it clear items are clickable */
         }
 
@@ -193,7 +193,7 @@ html>
 
     <div class="send-message">
         <div class="container">
-            <form asp-controller="Instructor" id="contact" asp-action="Addcourse" method="post">
+            <form enctype="multipart/form-data" asp-controller="Instructor" id="contact" asp-action="Addcourse" method="post">
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-heading">
@@ -207,7 +207,7 @@ html>
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <fieldset>
-                                        <input name="course name" type="text" class="form-control" id="course name" placeholder="course name">
+                                        <input asp-for="Title" class="form-control" id="course name" placeholder="course name">
                                     </fieldset>
                                 </div>
 
@@ -311,7 +311,7 @@ html>
                                 <!-- Coourse link    region -->
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <fieldset>
-                                        <input name="link " type="url" class="form-control" id="link " placeholder="link " >
+                                        <input asp-for="Link" type="url" class="form-control" id="link " placeholder="Course link " >
                                     </fieldset>
                                 </div>
 
@@ -405,9 +405,9 @@ html>
                                     <fieldset>
                                         <div class="form-group mb-4">
                                             <select id="pricestatusdropdown" asp-for="PriceStatus"  style="border: 1px solid #e9ecef; border-radius: 0.25rem;" class="form-select mr-sm-2">
-                                                <option value="-1"> Price Status &#9660;</option>
-                                                <option value="0"> Paid</option>
-                                                <option value="1"> Free</option>
+                                                <option  value=""> Price Status &#9660;</option>
+                                                <option value="false"> Paid</option>
+                                                <option value="true"> Free</option>
                                             </select>
                                         </div>
                                     </fieldset>
@@ -418,17 +418,37 @@ html>
 
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <fieldset>
-                                        <input name="course duration" type="time" class="form-control" id="course duration " placeholder="course duration" >
+                                        <input asp-for="CourseDuration" type="number" class="form-control" id="courseduration " placeholder="Course Total Hours" >
                                     </fieldset>
                                 </div>
+
+
+
+                                <!-- course price status   region -->
+
+
+
+
+
+
+
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <fieldset>
-                                        <input name="video length average" type="time" class="form-control" id="video length average" placeholder="video length average">
+@*                                         <label asp-for="VedioLength"></label>
+ *@                                        <div class="form-group mb-4">
+                                            <select id="videolengthaverage" asp-for="VedioLength" asp-items="Html.GetEnumSelectList<VideoLengthCategory>()" style="border: 1px solid #e9ecef; border-radius: 0.25rem;" class="form-select mr-sm-2">
+                                               <option value="0"> Average Videio Length &#9660;</option>
+                                            </select>
+                                        </div>
                                     </fieldset>
                                 </div>
+
+
+                                <!-- course picture   region -->
+
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <fieldset>
-                                        <input name="course profile" type="file" class="form-control" id="course profile" placeholder="course profile" >
+                                        <input asp-for="Picture"  class="form-control" id="course picture" placeholder="Course Poster Image" >
                                     </fieldset>
                                 </div>
                             
