edit in routing

--- a/WebApplication2/Views/Student/Review.cshtml
+++ b/WebApplication2/Views/Student/Review.cshtml
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-md-8">
                     <div class="contact-form">
-                        <form id="contact" action="" method="post">
+                        <form id="contact" method="post" asp-action="review">
                             <div class="row">
                                 <div class="col-lg-12">
                                     <fieldset>
