--- a/WebApplication2/Views/Home/Category.cshtml
+++ b/WebApplication2/Views/Home/Category.cshtml
@@ -16,7 +16,7 @@
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" >
 
 
-
+    
     <link href="~/css/site.css" rel="stylesheet">
     <link href="~/css/site1.css" rel="stylesheet">
     <link href="~/css/site2.css" rel="stylesheet">
@@ -48,7 +48,7 @@
               <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
          
-                  <a class="navbar-brand" href="index.html">
+                  <a class="navbar-brand" asp-action="index">
                     <h2 ><em>L</em>earn Consult</h2>
                   </a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
