--- a/WebApplication2/Views/Home/SignUp.cshtml
+++ b/WebApplication2/Views/Home/SignUp.cshtml
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="contact-form">
-                        <form id="contact" action="" method="post">
+                        <form id="contact" method="post" asp-action="signup">
                             <div class="row">
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <fieldset >
