--- a/WebApplication2/Views/Home/ForInstructor.cshtml
+++ b/WebApplication2/Views/Home/ForInstructor.cshtml
@@ -206,7 +206,7 @@
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <fieldset>
 
-                                        <input asp-area="PhoneNumber" type="" class="form-control" placeholder="Phone Number" required="">
+                                        <input asp-area="PhoneNumber" class="form-control" placeholder="Phone Number" required="">
 
                                     </fieldset>
                                 </div>  
