populating the dropdown list of the categories

--- a/WebApplication2/Views/Home/Category.cshtml
+++ b/WebApplication2/Views/Home/Category.cshtml
@@ -63,7 +63,9 @@
                           Category
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Action</a></li>
+                               
+                                    <li><a class="dropdown-item" asp-controller="home" asp-action="Category">category.</a></li>
+                           
                           <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Another action</a></li>
                           <li><a class="dropdown-item" asp-controller="home" asp-action="Category">Something else here</a></li>
                         </ul>
