--- a/WebApplication2/Views/Home/Category.cshtml
+++ b/WebApplication2/Views/Home/Category.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@* <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -101,7 +101,7 @@
                   </div>
         
               </nav>
-            </header>
+            </header> *@
 
                     <!-- Page Content -->
                       <div class="banner header-text">
@@ -280,7 +280,7 @@
 
                         </div>
                       </div>
-                         <footer class="footer_area section_gap_top">
+@*                          <footer class="footer_area section_gap_top">
                           <div class="container">
                             <div class="row single-footer-widget">
                               <div class="col-lg-6 col-md-6 col-sm-12">
@@ -328,12 +328,16 @@
                     <script src="~/js/site4.js"></script>
 
                     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> *@
                     <script>
                     $('.btn').click(function() {
                       $('.collapse-content').toggle();
                     });
                     </script>           
-  </body>
+@*   </body>
 
-  </html>
+
+                </html>
+                *@
+
+
