--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@* <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -98,7 +98,7 @@
           </div>
         
       </nav>
-    </header>
+    </header> *@
 
     <!-- Page Content -->
     <!-- Banner Starts Here -->
@@ -324,7 +324,7 @@
     </div>
     <!-- Recent Reviews Ends Here -->
 
-   <footer class="footer_area section_gap_top">
+@*    <footer class="footer_area section_gap_top">
       <div class="container">
         <div class="row single-footer-widget">
           <div class="col-lg-6 col-md-6 col-sm-12">
@@ -374,8 +374,12 @@
           }
       }
     </script>
+    
+    
+     </body>
+    *@
 
 
-  </body>
+ 
 
-</html>
+@* </html> *@
